# vpnBot

./: .dockerignore  .env_example  .gitignore  Client.py  DateFunc.py  Dockerfile  Ips.py  Keys.py  README.md  background.py  celery_config.py  check_payment_day_script.py  client.py  config.py  constants.py  db.py  dispatcher.py  docker-compose.yml  draft.py  files.py  help.txt  keyboards.py  logs.txt  main.py  old_db.py  pyproject.toml  qr.py  restart_bot.sh  run_every_day_script.sh  send_msg_to_all_users.py  shared.py
Exceptions/: NoSuchClientExistsError.py  NotEnoughMoneyError.py
api/: config.py  main.py  schemas.py  spec.yaml  utils.py
classes_util/: Client.py  DateFunc.py  Files.py  Ips.py  Keys.py
client_files/: 506954303_1.conf  506954303_2.conf  506954303_3.conf  506954303_data.txt  client10.conf  client3.conf  client4.conf  client5.conf  client6.conf  client7.conf  client8.conf  client9.conf  my_phone.conf  vpn.conf
config/: background.py  config.py  main.py
cybernexvpn/: .env_example
cybernexvpn_bot/: config.py  new_text_storage.py
cybernexvpn_client/: client.py
db/: db.py
handlers/: __init__.py  actions.py  consts.py  keyboards.py  payments.py  п.json
server/: main.py  middleware.py
setup_utils/: cront.txt  docker-compose.yml  run.sh
some_dir/: meta03-09-2023-19-02-45.conf  meta03-09-2023-19-02-57.conf  meta03-09-2023-19-23-21.conf  meta03-09-2023-19-40-32.conf  meta03-09-2023-20-07-11.conf  meta03-09-2023-20-08-44.conf  server.conf
system/: config.py  dispatcher.py  main.py
utils/: fill_in_ips.py  send_msg_to_all_users.py  sync_iter.sh
vpnBot/: .env_example  celery_tasks.py  check_payment_day_script.py  (+6 more)
(+129 files in other folders)
