[tool.poetry]
name = "vpnbot"
version = "0.1.0"
description = ""
authors = ["arsenyvolodko <arvolodko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
psycopg2-binary = "^2.9.9"
python-dateutil = "^2.9.0"
qrcode = "^7.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
