[tool.poetry]
name = "vpnbot"
version = "0.1.0"
description = "tg-bot for providing wireguard vpn keys"
authors = ["Volodko Arseny <arvolodko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
python-dateutil = "^2.9.0"
qrcode = "^7.4.2"
python-dotenv = "^1.0.1"
tqdm = "^4.66.2"
yookassa = "^3.1.0"
uvicorn = "^0.29.0"
fastapi = "^0.110.2"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
aiogram = "^3.5.0"
greenlet = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
