[tool.poetry]
name = "vpnbot"
version = "0.1.0"
description = "tg-bot for providing wireguard vpn keys"
authors = ["Volodko Arseny <arvolodko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-dateutil = "^2.9.0"
python-dotenv = "^1.0.1"
yookassa = "^3.1.0"
uvicorn = "^0.29.0"
fastapi = "^0.110.2"
asyncpg = "^0.29.0"
aiogram = "^3.5.0"
greenlet = "^3.0.3"
celery = "^5.4.0"
redis = "^5.0.6"
django = "^5.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
